      versionedfiles, repositories, branches, and working trees
      (Aaron Bentley)

    * New Branch hooks facility, with one initial hook 'set_rh' which triggers
      whenever the revision history is set. This allows triggering on e.g.
      push, pull, commit, and so on. Developed for use with the branchrss
      plugin. See bzrlib.branch.BranchHooks for more details. (Robert Collins)

  BUGFIXES:

  TESTING:

    * New ``--first`` option to ``bzr selftest`` to run specified tests
      before the rest of the suite.  (Martin Pool)


bzr 0.14  2007-01-23

  IMPROVEMENTS:

    * ``bzr help global-options`` describes the global options. (Aaron Bentley)

  BUG FIXES:
    
    * Skip documentation generation tests if the tools to do so are not
      available. Fixes running selftest for installled copies of bzr. 
      (John Arbash Meinel, #80330)

    * Fix the code that discovers whether bzr is being run from it's
      working tree to handle the case when it isn't but the directory
      it is in is below a repository. (James Westby, #77306)


bzr 0.14rc1  2007-01-16

  IMPROVEMENTS:

    * New connection: ``bzr+http://`` which supports tunnelling the smart
      protocol over an HTTP connection. If writing is enabled on the bzr
      server, then you can write over the http connection.
      (Andrew Bennetts, John Arbash Meinel)

    * Aliases now support quotation marks, so they can contain whitespace
      (Marius Kruger)

    * PyCurlTransport now use a single curl object. By specifying explicitly
      the 'Range' header, we avoid the need to use two different curl objects
      (and two connections to the same server). (Vincent Ladeuil)

    * ``bzr commit`` does not prompt for a message until it is very likely to
      succeed.  (Aaron Bentley)

    * ``bzr conflicts`` now takes --text to list pathnames of text conflicts
      (Aaron Bentley)

    * Fix ``iter_lines_added_or_present_in_versions`` to use a set instead